--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -2,3 +2,6 @@ kotlin.code.style=official
 kotlin_version=2.2.21
 ktor_version=3.3.2
 logback_version=1.4.14
+postgresql_driver_version=42.7.7
+exposed_version = 0.41.1
+jbcrypt = 0.4
