--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -3,5 +3,6 @@ kotlin_version=2.2.21
 ktor_version=3.3.2
 logback_version=1.4.14
 postgresql_driver_version=42.7.7
-exposed_version = 0.41.1
+exposed_version = 0.61.0
 jbcrypt = 0.4
+java_time_version = 0.45.0
