--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 agp = "8.13.2"
-kotlin = "2.0.21"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.1"
-composeBom = "2024.09.00"
+activityCompose = "1.12.2"
+composeBom = "2025.12.01"
 koin = "4.1.1"
 loggingInterceptor = "5.3.2"
-nav3Core = "1.0.0-rc01"
-lifecycleViewmodelNav3 = "1.0.0-alpha04"
+nav3Core = "1.0.0"
+lifecycleViewmodelNav3 = "2.10.0"
 retrofit = "3.0.0"
 appcompat = "1.7.1"
 
